[package]
name = "moma_simulation_engine"
authors = ["Neil Crago"]
description = "A Simulation engine powered by MOMA"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/neil-crago/moma_simulation_engine"
documentation = "https://docs.rs/moma_simulation_engine"
keywords = ["simulation", "moma", "cellular-automata", "complex-systems"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
moma = "0.3.4"
num-complex = "0.4.6"
ordered-float = "5.0.0"
rand = "0.9.2"
