[package]
name = "moma_conways_game_of_life"
version = "0.1.0"
edition = "2024"

[dependencies]
moma = "0.3.0"
moma_simulation_engine = "0.1.7"
# --- Graphics Dependencies ---
pixels = "0.13.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"

# --- RNG Dependencies (Corrected Versions) ---
# Force the use of the modern, compatible rand ecosystem.
rand = "0.8.5"
rand_chacha = "0.3.1"