[package]
name = "moma_gower"
version = "0.1.0"
edition = "2024"
authors = ["Neil Crago"]

[dependencies]
moma = "0.3.0"
moma_simulation_engine = "0.1.8"
pixels = "0.13.0"
rustfft = "6.4.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"

rand = "0.9.2"
#pixels = "0.13.0"
#winit = "0.28.6" # Downgraded from 0.29
#winit_input_helper = "0.14.1" # Use a version compatible with winit 0.28